benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix036_power.opt_rmo.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix036_power.opt_rmo.opt.yml/mix036_power.opt_rmo.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix036_power.opt_rmo.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_ek01n4u1/tmp/tmp1g25g9ue.c
Compilation started
/tmp/BenchExec_run_ek01n4u1/tmp/tmp1g25g9ue.c: In function ‘P1’:
/tmp/BenchExec_run_ek01n4u1/tmp/tmp1g25g9ue.c:597:19: error: ‘FALSE’ undeclared (first use in this function)
  597 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_ek01n4u1/tmp/tmp1g25g9ue.c:597:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
